exports[`BoardContainer rendering should render correctly a board with a title 1`] = `
<div>
  <div
    className="my-navbar-top-padding">
    <nav
      className="navbar navbar-default navbar-fixed-top">
      <div
        className="container-fluid">
        <div
          className="navbar-header">
          <span
            className="navbar-brand">
            BoardTitle
          </span>
        </div>
      </div>
    </nav>
    <div
      className="my-lists-container">
      <form
        className="my-list-container-item"
        onSubmit={[Function]}>
        <div
          className="form-group">
          <input
            className="form-control"
            id={undefined}
            onChange={[Function]}
            placeholder="Add new list..."
            type="text"
            value="" />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BoardContainer rendering should render correctly a board with a title and a list 1`] = `
<div>
  <div
    className="my-navbar-top-padding">
    <nav
      className="navbar navbar-default navbar-fixed-top">
      <div
        className="container-fluid">
        <div
          className="navbar-header">
          <span
            className="navbar-brand">
            BoardTitle
          </span>
        </div>
      </div>
    </nav>
    <div
      className="my-lists-container">
      <div
        className="my-list-container-item panel panel-default"
        id={undefined}>
        <div
          className="panel-heading">
          list
        </div>
        <div
          className="panel-body">
          <button
            className="btn btn-primary btn-block"
            disabled={false}
            onClick={[Function]}
            type="button">
            Add Card
          </button>
        </div>
      </div>
      <form
        className="my-list-container-item"
        onSubmit={[Function]}>
        <div
          className="form-group">
          <input
            className="form-control"
            id={undefined}
            onChange={[Function]}
            placeholder="Add new list..."
            type="text"
            value="" />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BoardContainer rendering should render correctly a board with a title and two lists 1`] = `
<div>
  <div
    className="my-navbar-top-padding">
    <nav
      className="navbar navbar-default navbar-fixed-top">
      <div
        className="container-fluid">
        <div
          className="navbar-header">
          <span
            className="navbar-brand">
            BoardTitle
          </span>
        </div>
      </div>
    </nav>
    <div
      className="my-lists-container">
      <div
        className="my-list-container-item panel panel-default"
        id={undefined}>
        <div
          className="panel-heading">
          list
        </div>
        <div
          className="panel-body">
          <button
            className="btn btn-primary btn-block"
            disabled={false}
            onClick={[Function]}
            type="button">
            Add Card
          </button>
        </div>
      </div>
      <div
        className="my-list-container-item panel panel-default"
        id={undefined}>
        <div
          className="panel-heading">
          list2
        </div>
        <div
          className="panel-body">
          <button
            className="btn btn-primary btn-block"
            disabled={false}
            onClick={[Function]}
            type="button">
            Add Card
          </button>
        </div>
      </div>
      <form
        className="my-list-container-item"
        onSubmit={[Function]}>
        <div
          className="form-group">
          <input
            className="form-control"
            id={undefined}
            onChange={[Function]}
            placeholder="Add new list..."
            type="text"
            value="" />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BoardContainer rendering should render correctly an empty board 1`] = `
<div>
  <div
    className="my-navbar-top-padding">
    <nav
      className="navbar navbar-default navbar-fixed-top">
      <div
        className="container-fluid">
        <div
          className="navbar-header">
          <span
            className="navbar-brand">
            
          </span>
        </div>
      </div>
    </nav>
    <div
      className="my-lists-container">
      <form
        className="my-list-container-item"
        onSubmit={[Function]}>
        <div
          className="form-group">
          <input
            className="form-control"
            id={undefined}
            onChange={[Function]}
            placeholder="Add new list..."
            type="text"
            value="" />
        </div>
      </form>
    </div>
  </div>
</div>
`;
